--- a/Baoli/Business/Home/Controller/BLFeedbackViewController.xib
+++ b/Baoli/Business/Home/Controller/BLFeedbackViewController.xib
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BLFeedbackViewController">
             <connections>
+                <outlet property="typeView" destination="OGz-o2-tRv" id="2vx-vh-qkK"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -30,41 +31,14 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OGz-o2-tRv">
-                    <rect key="frame" x="0.0" y="51" width="375" height="100"/>
-                    <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cAw-MN-59B">
-                            <rect key="frame" x="36" y="16" width="46" height="30"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <state key="normal" title="软件问题"/>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pXM-dt-JJ2">
-                            <rect key="frame" x="158" y="16" width="46" height="30"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <state key="normal" title="小区设施"/>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fN9-hY-sVz">
-                            <rect key="frame" x="251" y="16" width="46" height="30"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <state key="normal" title="治安反应"/>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uwE-sr-6hr">
-                            <rect key="frame" x="36" y="54" width="46" height="30"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <state key="normal" title="车位问题"/>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gzj-sg-W30">
-                            <rect key="frame" x="151" y="62" width="46" height="30"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <state key="normal" title="其他"/>
-                        </button>
-                    </subviews>
+                    <rect key="frame" x="0.0" y="41" width="375" height="100"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="100" id="zN1-lv-2Zy"/>
                     </constraints>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="反馈内容" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9OB-7W-vRd">
-                    <rect key="frame" x="20" y="161" width="100" height="21"/>
+                    <rect key="frame" x="20" y="151" width="100" height="21"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="100" id="apM-aa-GeD"/>
                         <constraint firstAttribute="height" constant="21" id="x1c-60-ruY"/>
@@ -73,52 +47,16 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="   保利倾听每一个业主的宝贵意见" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="mVK-jv-9YV">
-                    <rect key="frame" x="0.0" y="192" width="375" height="100"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="100" id="aFT-gy-5cr"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                </textView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="联系电话" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J4F-gb-6hh">
-                    <rect key="frame" x="20" y="302" width="100" height="21"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="100" id="gyn-Ml-8ql"/>
-                        <constraint firstAttribute="height" constant="21" id="n7j-KF-NpI"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请输入手机号码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rkl-Fd-Lck">
-                    <rect key="frame" x="0.0" y="333" width="375" height="30"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="30" id="Xr5-Ca-tO6"/>
-                    </constraints>
-                    <nil key="textColor"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits"/>
-                </textField>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="OGz-o2-tRv" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="0z4-sO-2ji"/>
-                <constraint firstItem="rkl-Fd-Lck" firstAttribute="top" secondItem="J4F-gb-6hh" secondAttribute="bottom" constant="10" id="7cZ-hH-rg0"/>
-                <constraint firstAttribute="trailing" secondItem="rkl-Fd-Lck" secondAttribute="trailing" id="H0I-ga-CMS"/>
                 <constraint firstItem="77G-jU-6B3" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="10" id="I1I-St-Rly"/>
-                <constraint firstItem="OGz-o2-tRv" firstAttribute="top" secondItem="77G-jU-6B3" secondAttribute="bottom" constant="20" id="Nhy-sI-uZR"/>
+                <constraint firstItem="OGz-o2-tRv" firstAttribute="top" secondItem="77G-jU-6B3" secondAttribute="bottom" constant="10" id="Nhy-sI-uZR"/>
                 <constraint firstItem="9OB-7W-vRd" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="PA7-Nx-UPz"/>
-                <constraint firstItem="rkl-Fd-Lck" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="ToX-oS-Mar"/>
-                <constraint firstItem="mVK-jv-9YV" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="XqA-fH-Gw6"/>
                 <constraint firstItem="9OB-7W-vRd" firstAttribute="top" secondItem="OGz-o2-tRv" secondAttribute="bottom" constant="10" id="aVe-VH-AGz"/>
                 <constraint firstItem="77G-jU-6B3" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="bBy-oW-2oX"/>
                 <constraint firstAttribute="trailing" secondItem="OGz-o2-tRv" secondAttribute="trailing" id="fVq-Mv-Oir"/>
-                <constraint firstItem="J4F-gb-6hh" firstAttribute="top" secondItem="mVK-jv-9YV" secondAttribute="bottom" constant="10" id="jYJ-b8-Io0"/>
-                <constraint firstItem="mVK-jv-9YV" firstAttribute="top" secondItem="9OB-7W-vRd" secondAttribute="bottom" constant="10" id="jk5-NR-Cwb"/>
-                <constraint firstAttribute="trailing" secondItem="mVK-jv-9YV" secondAttribute="trailing" id="pJX-bu-JQX"/>
-                <constraint firstItem="J4F-gb-6hh" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="zCu-Pa-IzQ"/>
             </constraints>
             <point key="canvasLocation" x="34.5" y="54.5"/>
         </view>
