--- a/Baoli/Business/Home/View/BLParkingCell.xib
+++ b/Baoli/Business/Home/View/BLParkingCell.xib
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -16,18 +16,18 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="119"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="414" height="118.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="414" height="118"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="U99-a0-UQz">
-                        <rect key="frame" x="18" y="13" width="100" height="80"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backgroud2.png" translatesAutoresizingMaskIntoConstraints="NO" id="U99-a0-UQz">
+                        <rect key="frame" x="18" y="19.5" width="100" height="80"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="80" id="3wL-22-CQS"/>
                             <constraint firstAttribute="width" constant="100" id="V9C-Kw-Gw3"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="佛山保利A栋" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k7h-Ey-hbQ">
-                        <rect key="frame" x="128" y="23" width="100" height="21"/>
+                        <rect key="frame" x="128" y="18" width="100" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="5rD-Y3-Oar"/>
                             <constraint firstAttribute="width" constant="100" id="61y-19-eew"/>
@@ -37,7 +37,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" alpha="0.59999999999999998" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="业主A" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sln-Uo-Mm0">
-                        <rect key="frame" x="128" y="54" width="100" height="20"/>
+                        <rect key="frame" x="128" y="49" width="100" height="20"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="100" id="XBq-JP-fxB"/>
                             <constraint firstAttribute="height" constant="20" id="kCK-Az-6UI"/>
@@ -47,7 +47,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" alpha="0.59999999999999998" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="小区C幢车位C2200" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t8q-MS-Hpp">
-                        <rect key="frame" x="128" y="79" width="100" height="20"/>
+                        <rect key="frame" x="128" y="74" width="100" height="20"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="2W7-o5-JS6"/>
                             <constraint firstAttribute="width" constant="100" id="4bH-MN-jXy"/>
@@ -69,12 +69,12 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="Sln-Uo-Mm0" firstAttribute="top" secondItem="k7h-Ey-hbQ" secondAttribute="bottom" constant="10" id="Eku-5Z-OSJ"/>
+                    <constraint firstItem="U99-a0-UQz" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="M2P-yu-fFL"/>
                     <constraint firstItem="vlJ-V4-rft" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="OGd-GX-vJt"/>
-                    <constraint firstItem="k7h-Ey-hbQ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="15" id="bhu-Nb-9wc"/>
+                    <constraint firstItem="k7h-Ey-hbQ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="10" id="bhu-Nb-9wc"/>
                     <constraint firstItem="k7h-Ey-hbQ" firstAttribute="leading" secondItem="U99-a0-UQz" secondAttribute="trailing" constant="10" id="f0o-MK-eh4"/>
                     <constraint firstItem="t8q-MS-Hpp" firstAttribute="leading" secondItem="U99-a0-UQz" secondAttribute="trailing" constant="10" id="jNK-gs-wxj"/>
                     <constraint firstItem="t8q-MS-Hpp" firstAttribute="top" secondItem="Sln-Uo-Mm0" secondAttribute="bottom" constant="5" id="oyH-Vc-Z8g"/>
-                    <constraint firstItem="U99-a0-UQz" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="5" id="qb7-Ii-bkx"/>
                     <constraint firstItem="Sln-Uo-Mm0" firstAttribute="leading" secondItem="U99-a0-UQz" secondAttribute="trailing" constant="10" id="wMk-Ak-ZMn"/>
                     <constraint firstItem="U99-a0-UQz" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="wc7-TL-lXj"/>
                     <constraint firstAttribute="trailingMargin" secondItem="vlJ-V4-rft" secondAttribute="trailing" constant="10" id="yqd-kD-STC"/>
@@ -83,4 +83,7 @@
             <point key="canvasLocation" x="81" y="-36.5"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="backgroud2.png" width="1118" height="679"/>
+    </resources>
 </document>
