--- a/Baoli/Business/Home/View/BLReviewCell.xib
+++ b/Baoli/Business/Home/View/BLReviewCell.xib
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -12,11 +12,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="102" id="KGk-i7-Jjw" customClass="BLReviewCell">
-            <rect key="frame" x="0.0" y="0.0" width="377" height="102"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="111" id="KGk-i7-Jjw" customClass="BLReviewCell">
+            <rect key="frame" x="0.0" y="0.0" width="378" height="111"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="377" height="102"/>
+                <rect key="frame" x="0.0" y="0.0" width="378" height="110.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="业主A先生" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X19-zp-abR">
@@ -30,53 +30,108 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="详情" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TUZ-5v-Eos">
-                        <rect key="frame" x="299" y="77.5" width="60" height="21"/>
+                        <rect key="frame" x="300" y="76.5" width="60" height="21"/>
                         <color key="backgroundColor" red="0.22352941176470589" green="0.49019607843137253" blue="0.87058823529411766" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="21" id="14H-hQ-osI"/>
-                            <constraint firstAttribute="width" constant="60" id="wGR-gb-BR5"/>
+                            <constraint firstAttribute="width" constant="60" id="U1o-NQ-aSq"/>
+                            <constraint firstAttribute="height" constant="21" id="ep5-3w-KYg"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.59999999999999998" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2016/12/12" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gK6-Jw-HXB">
-                        <rect key="frame" x="267" y="10" width="100" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="21" id="7Te-JC-iJ7"/>
-                            <constraint firstAttribute="width" constant="100" id="lzs-4z-W5D"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="n5w-Vc-lRp">
-                        <rect key="frame" x="18" y="21" width="60" height="60"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="我.png" translatesAutoresizingMaskIntoConstraints="NO" id="n5w-Vc-lRp">
+                        <rect key="frame" x="18" y="25.5" width="60" height="60"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="60" id="JiU-cF-MeF"/>
                             <constraint firstAttribute="width" constant="60" id="M1W-tk-hwV"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.59999999999999998" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="不错不错，非常不错，下次继续" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XDj-Co-Pub">
-                        <rect key="frame" x="88" y="72" width="203" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.59999999999999998" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="不错不错，非常不错，下次继续" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XDj-Co-Pub">
+                        <rect key="frame" x="88" y="76.5" width="207" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="3au-Z7-q89"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="选中.png" translatesAutoresizingMaskIntoConstraints="NO" id="bGh-EW-ldX">
+                        <rect key="frame" x="88" y="44" width="20" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="20" id="MPi-hK-rQL"/>
+                            <constraint firstAttribute="height" constant="20" id="TaL-zj-Upz"/>
+                        </constraints>
+                    </imageView>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="选中.png" translatesAutoresizingMaskIntoConstraints="NO" id="jgY-pJ-GcU">
+                        <rect key="frame" x="163" y="44" width="20" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="20" id="V0A-Vu-om0"/>
+                            <constraint firstAttribute="height" constant="20" id="Y3e-fP-mLZ"/>
+                        </constraints>
+                    </imageView>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="半星选中.png" translatesAutoresizingMaskIntoConstraints="NO" id="Bcv-xh-cQa">
+                        <rect key="frame" x="188" y="44" width="20" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="20" id="9xd-cH-kEN"/>
+                            <constraint firstAttribute="height" constant="20" id="Tap-i3-eib"/>
+                        </constraints>
+                    </imageView>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="选中.png" translatesAutoresizingMaskIntoConstraints="NO" id="5DY-Hy-xb5">
+                        <rect key="frame" x="113" y="44" width="20" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20" id="BGL-Pz-E3u"/>
+                            <constraint firstAttribute="width" constant="20" id="YSz-Qp-uds"/>
+                        </constraints>
+                    </imageView>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="选中.png" translatesAutoresizingMaskIntoConstraints="NO" id="Lgc-cN-n7s">
+                        <rect key="frame" x="138" y="44" width="20" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20" id="kZ9-Jz-tfW"/>
+                            <constraint firstAttribute="width" constant="20" id="q1H-tK-tMg"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.59999999999999998" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2016/12/12" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gK6-Jw-HXB">
+                        <rect key="frame" x="260" y="18" width="100" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="6XK-Ie-S3w"/>
+                            <constraint firstAttribute="width" constant="100" id="eg8-Md-NGj"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="Lgc-cN-n7s" firstAttribute="leading" secondItem="5DY-Hy-xb5" secondAttribute="trailing" constant="5" id="0SD-Ne-Pbf"/>
+                    <constraint firstItem="TUZ-5v-Eos" firstAttribute="leading" secondItem="XDj-Co-Pub" secondAttribute="trailing" constant="5" id="5gX-7R-fq2"/>
                     <constraint firstItem="X19-zp-abR" firstAttribute="leading" secondItem="n5w-Vc-lRp" secondAttribute="trailing" constant="10" id="9Xo-fr-Hsc"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="TUZ-5v-Eos" secondAttribute="trailing" constant="10" id="Arf-Uy-lVp"/>
+                    <constraint firstItem="gK6-Jw-HXB" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="10" id="Eot-l2-IBP"/>
                     <constraint firstItem="n5w-Vc-lRp" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Guk-FG-1cm"/>
-                    <constraint firstAttribute="trailing" secondItem="gK6-Jw-HXB" secondAttribute="trailing" constant="10" id="Ibd-nT-QJC"/>
-                    <constraint firstItem="gK6-Jw-HXB" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="S9n-Ug-voy"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="TUZ-5v-Eos" secondAttribute="bottom" constant="5" id="Iom-kQ-295"/>
+                    <constraint firstItem="Bcv-xh-cQa" firstAttribute="centerY" secondItem="bGh-EW-ldX" secondAttribute="centerY" id="TNJ-Kh-IbY"/>
+                    <constraint firstItem="jgY-pJ-GcU" firstAttribute="leading" secondItem="Lgc-cN-n7s" secondAttribute="trailing" constant="5" id="UJs-pq-nJn"/>
+                    <constraint firstItem="5DY-Hy-xb5" firstAttribute="centerY" secondItem="bGh-EW-ldX" secondAttribute="centerY" id="WeF-b3-P3R"/>
                     <constraint firstItem="X19-zp-abR" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="10" id="aX0-Oz-Kex"/>
+                    <constraint firstItem="XDj-Co-Pub" firstAttribute="leading" secondItem="n5w-Vc-lRp" secondAttribute="trailing" constant="10" id="bKv-fu-Kea"/>
+                    <constraint firstItem="5DY-Hy-xb5" firstAttribute="leading" secondItem="bGh-EW-ldX" secondAttribute="trailing" constant="5" id="cs2-mh-ee7"/>
                     <constraint firstItem="n5w-Vc-lRp" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="eLe-L8-Hf6"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="TUZ-5v-Eos" secondAttribute="trailing" constant="10" id="rf7-uc-lj9"/>
-                    <constraint firstItem="TUZ-5v-Eos" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" constant="5" id="z57-yK-EeE"/>
+                    <constraint firstItem="bGh-EW-ldX" firstAttribute="top" secondItem="X19-zp-abR" secondAttribute="bottom" constant="5" id="iCA-1C-uSc"/>
+                    <constraint firstItem="bGh-EW-ldX" firstAttribute="leading" secondItem="n5w-Vc-lRp" secondAttribute="trailing" constant="10" id="k2l-LS-Ohn"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="XDj-Co-Pub" secondAttribute="bottom" constant="5" id="lMj-8u-V6k"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="gK6-Jw-HXB" secondAttribute="trailing" constant="10" id="lkG-HB-agY"/>
+                    <constraint firstItem="Bcv-xh-cQa" firstAttribute="leading" secondItem="jgY-pJ-GcU" secondAttribute="trailing" constant="5" id="mrC-UQ-EZA"/>
+                    <constraint firstItem="Lgc-cN-n7s" firstAttribute="centerY" secondItem="bGh-EW-ldX" secondAttribute="centerY" id="pmr-Cd-POc"/>
+                    <constraint firstItem="jgY-pJ-GcU" firstAttribute="centerY" secondItem="bGh-EW-ldX" secondAttribute="centerY" id="r3T-Qv-qgp"/>
                 </constraints>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="62.5" y="25"/>
+            <point key="canvasLocation" x="63" y="-26.5"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="半星选中.png" width="60" height="60"/>
+        <image name="我.png" width="67" height="67"/>
+        <image name="选中.png" width="60" height="60"/>
+    </resources>
 </document>
